--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>SAZA</title>
 </head>
 <body>
@@ -24,6 +25,7 @@
                     <div></div>
                 </div>
                 <div>
+                    <i class="fa-brands fa-facebook-square"></i>
                     <a href=""><span>Facebook으로 로그인</span></a>
                     <a href=""><span>비밀번호를 잊으셨나요?</span></a>
                 </div>
@@ -42,21 +44,28 @@
             </div>
         </div>
     </div>
-    <div class="under_line"><li>Meta</li>
-    <li>소개</li>
-    <li>블로그</li>
-    <li>채용 정보</li>
-    <li>도움말</li>
-    <li>API</li>
-    <li>개인정보처리방침</li>
-    <li>약관</li>
-    <li>인기 계정</li>
-    <li>위치</li>
-    <li>Instagram Lite</li>
-    <li>댄스</li>
-    <li>식음료</li>
-    <li>집 및 정원</li>
-    <li>음악</li>
-    <li>시각 예술</li></div>
+    <ul class="under_line">
+        <a><li>Meta</li></a>
+        <a><li>소개</li></a>
+        <a><li>블로그</li></a>
+        <a><li>채용 정보</li></a>
+        <a><li>도움말</li></a>
+        <a></a><li>API</li>
+        <a></a><li>개인정보처리방침</li>
+        <a></a><li>약관</li>
+        <a></a><li>인기 계정</li>
+        <a></a><li>위치</li>
+        <a></a><li>Instagram Lite</li>
+        <a></a><li>댄스</li>
+        <a></a><li>식음료</li>
+        <a></a><li>집 및 정원</li>
+        <a></a><li>음악</li>
+        <a></a><li>시각 예술</li></ul>
+    <div>
+        <form action="select">
+            <input type="lang">   
+        </form>
+        <span>© 2022 Instagram from Meta</span>
+    </div>
 </body>
 </html>
