--- a/login_page.html
+++ b/login_page.html
@@ -15,12 +15,18 @@
         </div> 주석부분은 왜 안되는지 모르겠음.-->
         <img class="phone_img" src="./phone.png" alt="PhonePicture">
         <div class="right_colunm">
+
+
             <div class="main_container">
                 <a  href=""><img class="logo" src="./MainLogo.png" alt="main logo picture"></a>
-                <form action="">
-                    <input class="ID" type="E-mail" placeholder="전화번호, 사용자 이름 또는 이메일"><input type="password" placeholder="비밀번호" >
+                <div class="log_in_tool">
+                    <input class="ID" type="E-mail" placeholder="전화번호, 사용자 이름 또는 이메일">
+                    <input class="password" type="password" placeholder="비밀번호" >
                     <button class="log_in_button">로그인</button>
-                </form >
+                
+                </div >
+
+                
                 <div class="or_line">
                     <div class="or_bar"></div>
                     <span class="or">또는</span>
