--- a/main_page.html
+++ b/main_page.html
@@ -11,9 +11,16 @@
 <body>
     <div class="navigation_bar">
         <img class="main_logo" src="./MainLogo.png" alt="main_logo">
-        <form action="">
-            <input class="search" type="search" placeholder="검색">
-        </form>
+        <div class="searchbar_complex">
+            <input class="search_bar" type="search" placeholder="검색">
+            <i class="fa-solid disappearing fa-magnifying-glass"></i>
+            <div class="search_history">
+                <div class="search_history_upper_part">
+                    <span class="history">최근 기록</span>
+                </div>
+                <img class="history_img" src="./ottogi.png" alt="">
+            </div>
+        </div>
         <div class="navigation_icon">
             <a href=""><i class="fa-solid fa-house"></i></a>
             <a href=""><i class="fa-brands fa-telegram"></i></a>
